# VastVulkan

./: .gitignore  CMakeLists.txt  cmath.py  ninjaclan.glsl  triangle.vert
src/: kernel.cl  main copy.cpp  main.cpp  main1.txt  main3.txt  mein.cpp
